# Document_QA_system

./: .gitignore  README.md  app.py  main.py  pyproject.toml
notebooks/: test.ipynb
src/document_qa_system/: config.py  document_loader.py  rag_chain.py  text_processor.py  vectorstore.py
tests/: test_chunking.py  test_loader.py  test_rag_chain.py  test_vetor_store.py
