[project]
name = "document-qa-system"
version = "0.1.0"
description = "Enterprises Document Q&A System with Langchain RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"